# depmesh

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  depmesh.toml  docker-compose.yml  pyproject.toml  tach.toml  todo.org
.github/workflows/: release.yaml
changes/: 2026-05-04T13-10-56_0.1.1.md  next_release.md
depmesh/: __init__.py  __main__.py
depmesh/cli/: __init__.py  application.py  entities.py  errors.py
depmesh/cli/tests/: test_application.py  test_entities.py
depmesh/core/: __init__.py  entities.py  errors.py  warnings.py
depmesh/core/tests/: test_warnings.py
depmesh/discovery/: __init__.py  artifacts.py  entities.py  errors.py  paths.py  query.py
depmesh/discovery/expressions/: __init__.py  command.py  difference.py  entities.py  glob.py  intersection.py  path.py  regex.py  union.py
depmesh/discovery/expressions/tests/: test_command.py  test_difference.py  test_entities.py  test_glob.py  test_intersection.py  test_path.py  test_regex.py  test_union.py
depmesh/discovery/matchers/: __init__.py  all.py  any.py  entities.py  glob.py  not_.py  path.py  paths.py  regex.py
depmesh/discovery/matchers/tests/: test_all.py  test_any.py  test_glob.py  test_not_.py  test_path.py  test_paths.py  test_regex.py
depmesh/discovery/predicates/: __init__.py  all.py  any.py  base.py  compiler.py  entities.py  glob.py  not_.py  one_of.py  regex.py
depmesh/discovery/predicates/tests/: __init__.py  test_compiler.py  test_composition.py  test_glob.py  test_one_of.py  test_regex.py
depmesh/discovery/sources/: __init__.py  base.py  command.py  compiler.py  difference.py  entities.py  files.py  filter.py  intersection.py  list.py  union.py
depmesh/discovery/sources/tests/: __init__.py  test_command.py  test_compiler.py  test_composition.py  test_files.py  test_list.py
depmesh/discovery/tests/: test_entities.py  test_errors.py  test_paths.py  test_query.py
depmesh/domain/: __init__.py  entities.py
depmesh/protocol/: __init__.py  entities.py  utils.py
depmesh/protocol/renderers/: __init__.py  automation.py  base.py  human.py  llm.py
depmesh/protocol/renderers/tests/: __init__.py  test_automation.py  test_base.py  test_human.py  test_llm.py
depmesh/protocol/tests/: test_utils.py
depmesh/skills/: __init__.py  entities.py  fixtures.py
depmesh/skills/fixtures/: configuration.md  initialization.md  skill.md  usage.md
depmesh/skills/tests/: __init__.py  test_entities.py  test_fixtures.py  test_init.py
depmesh/workspace/: __init__.py  config.py  entities.py  errors.py  init.py
depmesh/workspace/fixtures/: base_config.toml
depmesh/workspace/tests/: test_config.py  test_entities.py  test_init.py
docker/: Dockerfile
specs/: dictionary.md  intro.md
specs/architecture/: entities.md  errors.md  modules_layout.md  skill_fixtures.md  static_analysis.md  tests.md
specs/behavior/: cli.md  config.md  file_paths.md  skill_fixtures.md
specs/documentation/: readme.md
specs/meta/: general.md
workflows/: polish.donna.md
