[project]
name = "depmesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "pydantic~=2.13.3",
    "pytest~=9.0.3",
    "pytest-mock~=3.15.1",
    "tach>=0.34.1",
    "typer~=0.25.1",
]

[project.scripts]
depmesh = "depmesh.cli.application:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
