[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depmesh"
version = "0.1.0"
description = "Unified, deterministic CLI for coding agents to discover relationships between project files and artifacts."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<4.0"
license = "BSD-3-Clause"
authors = [
    { name = "Aliaksei Yaletski", email = "a.eletsky@gmail.com" },
]
keywords = [
    "ai-agents",
    "cli",
    "code-analysis",
    "codebase-intelligence",
    "codebase-navigation",
    "coding-agents",
    "dependency-analysis",
    "dependency-graph",
    "impact-analysis",
    "llm",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic~=2.13.3",
    "tomli>=2.4.0",
    "typer~=0.25.1",
]

[project.urls]
Homepage = "https://github.com/Tiendil/depmesh"
Repository = "https://github.com/Tiendil/depmesh"
Issues = "https://github.com/Tiendil/depmesh/issues"

[project.scripts]
depmesh = "depmesh.cli.application:main"

[dependency-groups]
dev = [
    "autoflake==2.3.*",
    "black==25.12.*",
    "codespell==2.4.*",
    "flake8==7.3.*",
    "flake8-absolute-import==1.0.*",
    "flake8-annotations-complexity==0.1.*",
    "flake8-bandit==4.1.*",
    "flake8-docstrings==1.7.*",
    "flake8-eradicate==1.5.*",
    "flake8-functions==0.0.*",
    "flake8-print==5.0.*",
    "flake8-pyproject==1.2.*",
    "flake8-pytest==1.4.*",
    "isort==7.0.*",
    "mypy==1.19.*",
    "pytest==9.0.*",
    "pytest-mock==3.15.*",
    "tach==0.34.*",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.flake8]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D400",
    "D401",
    "S101",
    "S113",
    "S311",
    "W503",
    "CFQ004",
    "E203",
]
max-line-length = 119
exclude = [
    "build",
    "depmesh.egg-info",
]

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
remove_unused_variables = true
recursive = true

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
implicit_reexport = true
allow_untyped_calls = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.hatch.build.targets.sdist]
include = [
    "/depmesh",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["depmesh"]
